--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <div id="calculator">
+        <input type="text" id="display" disabled>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
