--- a/index.html
+++ b/index.html
@@ -9,8 +9,28 @@
 <body>
     <div id="calculator">
         <input type="text" id="display" readonly>
-        
+        <button>C</button>
+        <br>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>*</button>
+        <br>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>/</button>
+        <br>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>-</button>
+        <br>
+        <button>0</button>
+        <button>.</button>
+        <button>+</button>
+        <button>=</button>
     </div>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
 </body>
 </html>
